internal/testdata/sdk/error/fixtures/update_endpoint.go
// Generated by Fern. Do not edit.

package api

import (
	context "context"
	json "encoding/json"
	errors "errors"
	fmt "fmt"
	core "github.com/fern-api/fern-go/internal/testdata/sdk/error/fixtures/core"
	io "io"
	http "net/http"
)

type updateEndpoint struct {
	url        string
	httpClient core.HTTPClient
	header     http.Header
}

func newUpdateEndpoint(url string, httpClient core.HTTPClient, clientOptions *core.ClientOptions) *updateEndpoint {
	return &updateEndpoint{
		url:        url,
		httpClient: httpClient,
		header:     clientOptions.ToHeader(),
	}
}

func (u *updateEndpoint) decodeError(statusCode int, body io.Reader) error {
	decoder := json.NewDecoder(body)
	switch statusCode {
	case 426:
		value := new(UpgradeError)
		if err := decoder.Decode(value); err != nil {
			return err
		}
		value.StatusCode = statusCode
		return value
	}
	bytes, err := io.ReadAll(body)
	if err != nil {
		return err
	}
	return errors.New(string(bytes))
}

func (u *updateEndpoint) Call(ctx context.Context, id string, request string) (string, error) {
	endpointURL := fmt.Sprintf(u.url, id)
	var response string
	if err := core.DoRequest(
		ctx,
		u.httpClient,
		endpointURL,
		http.MethodPost,
		request,
		&response,
		u.header,
		u.decodeError,
	); err != nil {
		return response, err
	}
	return response, nil
}
